Add SSH proxy
- Create additional ResourceAccess and Authentication structures
  and related yaml to store in the database.
- The only supported driver is VMX.  All other drivers need to be
  taught about the new Authentication struct (in the future).
- Add ProxySshAddress configuration variable to fish Config, the
  default value is `0.0.0.0:2022`.
- Add corresponding SSH examples.

This feature currently only supports SSH via username/password.
See the new example label creation:

```
authentication:
  username: packer
  password: packer
```

When the fish node is running, you must query the application
resource UID and request `/access` (see new run application
example).  These passwords are **one time use only**, in order
to get a new password, re-request `/access`.
